<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/add_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term_name"
        android:id="@+id/tvTermName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBaseline="@+id/etTermName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTermName"
        android:layout_toRightOf="@+id/tvTermName"
        android:layout_toEndOf="@+id/tvTermName"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        android:id="@+id/tvStartDate"
        android:layout_below="@+id/tvTermName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBaseline="@+id/etStartDate"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/etStartDate"
        android:text="@string/default_text_date"
        android:layout_below="@+id/etTermName"
        android:layout_alignLeft="@+id/etTermName"
        android:layout_alignStart="@+id/etTermName"
        android:inputType="date"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        android:id="@+id/tvEndDate"
        android:layout_below="@+id/tvStartDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBaseline="@+id/etEndDate"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/etEndDate"
        android:text="@string/default_text_date"
        android:layout_below="@+id/etStartDate"
        android:layout_alignLeft="@id/etTermName"
        android:layout_alignStart="@+id/etTermName"
        android:inputType="date"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_save_term"
        android:id="@+id/btnSaveTerm"
        android:onClick="onClickSaveTerm"
        android:layout_below="@+id/etEndDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set reminder"
        android:id="@+id/cbAddTermStartDate"
        android:layout_alignTop="@+id/etStartDate"
        android:layout_toEndOf="@+id/etStartDate"
        android:checked="false"
        android:textSize="12sp"
        android:layout_marginLeft="5dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set reminder"
        android:id="@+id/cbAddTermEndDate"
        android:layout_alignTop="@+id/etEndDate"
        android:layout_toEndOf="@+id/etEndDate"
        android:checked="false"
        android:textSize="12sp"
        android:layout_marginLeft="5dp"/>

</RelativeLayout>